--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,8 @@ dependencyResolutionManagement {
 }
 rootProject.name = "Food Market"
 include ':app'
+include ':features:home'
+include ':features:search'
+include ':features:basket'
+include ':features:account'
+include ':features:navigation'
