--- a/settings.gradle
+++ b/settings.gradle
@@ -19,3 +19,4 @@ include ':features:search'
 include ':features:basket'
 include ':features:account'
 include ':features:navigation'
+include ':data'
