--- a/settings.gradle
+++ b/settings.gradle
@@ -20,3 +20,4 @@ include ':features:basket'
 include ':features:account'
 include ':features:navigation'
 include ':data'
+include ':features:categories'
