--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ android {
 
 dependencies {
 
+    implementation project(path: ':data')
     implementation project(path: ':features:account')
     implementation project(path: ':features:basket')
     implementation project(path: ':features:home')
@@ -53,5 +54,9 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:2.6.0"
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    // koin
+    implementation "io.insert-koin:koin-android:3.2.0"
+    implementation "io.insert-koin:koin-android-compat:3.2.0"
 
 }
