--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,13 @@ dependencies {
     implementation "io.insert-koin:koin-android:3.2.0"
     implementation "io.insert-koin:koin-android-compat:3.2.0"
 
+    // OkHTTP
+    def okhttpVersion = "4.9.3"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttpVersion"
+
+    // Retrofit
+    def retrofitVersion = "2.9.0"
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+
 }
