home category get data

--- a/features/home/build.gradle
+++ b/features/home/build.gradle
@@ -57,4 +57,10 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
+
+    // koin
+    implementation "io.insert-koin:koin-android:3.2.0"
+
+    //Picasso
+    implementation "com.squareup.picasso:picasso:2.8"
 }
