--- a/features/home/build.gradle
+++ b/features/home/build.gradle
@@ -35,6 +35,7 @@ android {
 
 dependencies {
 
+    implementation project(path: ':core')
     implementation project(path: ':features:categories')
 
     implementation 'androidx.core:core-ktx:1.8.0'
@@ -63,4 +64,6 @@ dependencies {
 
     //Picasso
     implementation "com.squareup.picasso:picasso:2.8"
+
+    implementation 'com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.5.9'
 }
