--- a/data/build.gradle
+++ b/data/build.gradle
@@ -32,7 +32,9 @@ android {
 
 dependencies {
 
+    implementation project(path: ':core')
     implementation project(path: ':features:home')
+    implementation project(path: ':features:categories')
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
