--- a/features/categories/build.gradle
+++ b/features/categories/build.gradle
@@ -36,6 +36,7 @@ android {
 dependencies {
 
     implementation project(path: ':core')
+    implementation project(path: ':features:toolbar')
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
